--- a/google/index.html
+++ b/google/index.html
@@ -2,18 +2,10 @@
 layout: default
 tab: welcome
 ---
-<body onload="initializeGoogle();">
-	<div class="map_holderGoogle" >
-		<div id="googleMap"></div>
-		<ul id="tabs" class="nav_links">
-			<a href="/google/"><li><img height="35px" src="/images/googlemaps.png"/></li></a>
-			<a href="/bing/"><li><img height="35px" src="/images/bing.png"/></li></a>
-		</ul>
-	</div>
-
-	<div>
-                <input onclick = "lineListenerOnGMap();" type=button value = "Add shape"/>
-                <input onclick = "tagListenerOnGMap();" type = button value = "Add Annotation"/>
-    </div>
+<body onload="SetEasel();">
+	
+    <div id="container"></div>
+   
+    <div id="map-canvas"/> 
 
 </body>
