zoom in/out. needs to be collerated.

--- a/google/index.html
+++ b/google/index.html
@@ -4,8 +4,16 @@ tab: welcome
 ---
 <body onload="SetEasel();">
 	
+
+    <button id="line-tool" type="button">Draw Line!</button> 
+
+    <button id="annotation-tool" type="button">Draw Annotation!</button> 
+    
+    
     <div id="container"></div>
+
    
     <div id="map-canvas"/> 
+
 
 </body>
