adding annotations and lines by hand. need to fix zoom out problem

--- a/google/index.html
+++ b/google/index.html
@@ -4,10 +4,15 @@ tab: welcome
 ---
 <body onload="SetEasel();">
 	
+    <button id="cancel-tool" type="button">Cancel!</button> 
 
     <button id="line-tool" type="button">Draw Line!</button> 
 
     <button id="annotation-tool" type="button">Draw Annotation!</button> 
+
+    <div id="text-debug">Title</div> 
+     <div id="text-debug2">Title</div> 
+   
     
     
     <div id="container"></div>
