--- a/google/index.html
+++ b/google/index.html
@@ -5,7 +5,7 @@ tab: welcome
 <body onload="SetEasel();">
 	
 	<script>
-		function setColourVar(int col){
+		function setColourVar(col){
 			alert("Colour set to" + col);
 		};
 	</script>
