--- a/google/index.html
+++ b/google/index.html
@@ -4,7 +4,8 @@ tab: welcome
 ---
 <body onload="SetEasel();">
 	
-	<script>
+
+	<script language="javascript" type="text/javascript">
 		function setColourVar(col){
 			alert("Colour set to" + col);
 		};
@@ -113,9 +114,7 @@ tab: welcome
 
 	</div>
 
-	<script>
-		document.getElementById("btn btn-info").onclick = setColourVar(2);
-	</script>
+	<input type="button" value="btn btn-info" onClick="setColourVar(2);">
     
 
 
