--- a/google/index.html
+++ b/google/index.html
@@ -114,7 +114,7 @@ tab: welcome
 
 	</div>
 
-	<input type="button" value="btn btn-info" onClick="setColourVar(2);">
+	<input type="button" value="btn btn-danger" onClick="setColourVar(2);">
     
 
 
