--- a/google/index.html
+++ b/google/index.html
@@ -78,7 +78,7 @@ tab: welcome
 
 			 		<button class="btn btn-primary active" value="btn btn-primary" type="button" name="color">
 			 			Blue
-			 			<input type="radio" checked/>
+			 			<input type="radio"/>
 			 		</button>
 
 			 		<button class="btn btn-info" value="btn btn-info" type="button" name="color">
