--- a/google/index.html
+++ b/google/index.html
@@ -118,7 +118,7 @@ tab: welcome
 
 	</div>
 
-	<input type="button" value="btn btn-danger" onClick="setColourVar(2);">
+	<input type="button" value="btn btn-primary" onClick="checkColour();">
     
 
 
