--- a/google/index.html
+++ b/google/index.html
@@ -2,6 +2,17 @@
 layout: default
 tab: welcome
 ---
+
+<script language="javascript" type="text/javascript">
+		function checkColour(){
+			if(document.getElementById('btn btn-primary').checked) {
+				alert("1 is checked");
+			}else if(document.getElementById('btn btn-info').checked) {
+				alert("2 is checked");
+				}
+		};
+	</script>
+	
 <body onload="SetEasel();">
 	
 
@@ -117,9 +128,7 @@ tab: welcome
 		</div>
 
 	</div>
-
-	<input type="button" value="btn btn-primary" onClick="checkColour();">
-    
+ 
 
 
 
@@ -138,6 +147,8 @@ tab: welcome
 
    
     <div id="map-canvas"/> 
+    
+    <p><input type="button" value="Click here" onClick="checkColour();"></p>
 
 
 </body>
