--- a/google/index.html
+++ b/google/index.html
@@ -19,9 +19,9 @@ tab: welcome
 	<script language="javascript" type="text/javascript">
 		function checkColour(){
 			if(document.getElementById('btn btn-primary').checked) {
-				alert("1 is checked");
+				alert('1 is checked');
 			}else if(document.getElementById('btn btn-info').checked) {
-				alert("2 is checked");
+				alert('2 is checked');
 				}
 		};
 	</script>
@@ -148,7 +148,7 @@ tab: welcome
    
     <div id="map-canvas"/> 
     
-    <p><input type="button" value="Click here" onClick="checkColour();"></p>
+    <p><input type="button" value="Click Here" onClick="checkColour();"></p>
 
 
 </body>
