--- a/google/index.html
+++ b/google/index.html
@@ -3,17 +3,13 @@ layout: default
 tab: welcome
 ---
 
-<!--
 <script language="javascript" type="text/javascript">
 		function checkColour(){
 			if(document.getElementById('btn btn-primary').checked) {
 				alert("1 is checked");
-			}else if(document.getElementById('btn btn-info').checked) {
-				alert("2 is checked");
-				}
+			}
 		};
-	</script>-->
-
+	</script>
 	
 <body onload="SetEasel();">
 	
