--- a/google/index.html
+++ b/google/index.html
@@ -113,6 +113,13 @@ tab: welcome
 		</div>
 
 	</div>
+	
+	window.addEventListener('keyup', function(e) {
+		if (e.keyCode === 13) {
+			checkColour();
+		}
+		)
+	})
  
 
 
