--- a/google/index.html
+++ b/google/index.html
@@ -8,6 +8,7 @@ tab: welcome
 			if(document.getElementById('btn btn-primary').checked) {
 				alert("1 is checked");
 			}
+			else { alert("Nada here");}
 		};
 		
 		window.addEventListener('keyup', function (e){
