--- a/google/index.html
+++ b/google/index.html
@@ -87,6 +87,10 @@ tab: welcome
 			 			Blue
 			 			<input type="radio" checked/>
 			 		</button>
+			 		
+			 		<form action="">
+<input type="radio" name="primary" value="primary">1<br>
+</form>
 
 			 		<button class="btn btn-info" value="btn btn-info" type="button" name="color">
 			 			Light Blue
