--- a/google/index.html
+++ b/google/index.html
@@ -5,7 +5,7 @@ tab: welcome
 
 <script language="javascript" type="text/javascript">
 		function checkColour(){
-			if(document.getElementById('btn btn-primary').checked) {
+			if(document.getElementById('btn btn-primary active').checked) {
 				alert("1 is checked");
 			}
 			else { alert("Nada here");}
@@ -87,10 +87,6 @@ tab: welcome
 			 			Blue
 			 			<input type="radio" checked/>
 			 		</button>
-			 		
-			 		<form action="">
-<input type="radio" name="primary" value="primary">1<br>
-</form>
 
 			 		<button class="btn btn-info" value="btn btn-info" type="button" name="color">
 			 			Light Blue
