--- a/google/index.html
+++ b/google/index.html
@@ -5,7 +5,7 @@ tab: welcome
 
 <script language="javascript" type="text/javascript">
 		function checkColour(){
-			if(document.getElementById('btn btn-primary active').checked) {
+			if(document.getElementById('btn btn-info').checked) {
 				alert("1 is checked");
 			}
 			else { alert("Nada here");}
@@ -85,12 +85,12 @@ tab: welcome
 
 			 		<button class="btn btn-primary active" value="btn btn-primary" type="button" name="color">
 			 			Blue
-			 			<input type="radio" checked/>
+			 			<input type="radio" />
 			 		</button>
 
 			 		<button class="btn btn-info" value="btn btn-info" type="button" name="color">
 			 			Light Blue
-			 			<input type="radio"/>
+			 			<input type="radio" checked/>
 			 		</button>
 
 			 		<button class="btn btn-success" value="btn btn-success" type="button" name="color">
