--- a/google/index.html
+++ b/google/index.html
@@ -83,7 +83,7 @@ tab: welcome
                 <li>
 			 	<div class="btn-group-vertical" data-toggle="buttons-radio">
 
-			 		<button class="btn btn-primary active" value="btn btn-primary" type="button" name="color">
+			 		<button class="btn btn-primary" value="btn btn-primary" type="button" name="color">
 			 			Blue
 			 			<input type="radio" />
 			 		</button>
