--- a/google/index.html
+++ b/google/index.html
@@ -85,12 +85,12 @@ tab: welcome
 
 			 		<button class="btn btn-primary" value="btn btn-primary" type="button" name="color">
 			 			Blue
-			 			<input type="radio" />
+			 			<input type="radio" checked>
 			 		</button>
 
 			 		<button class="btn btn-info" value="btn btn-info" type="button" name="color">
 			 			Light Blue
-			 			<input type="radio" checked/>
+			 			<input type="radio" />
 			 		</button>
 
 			 		<button class="btn btn-success" value="btn btn-success" type="button" name="color">
