--- a/google/index.html
+++ b/google/index.html
@@ -5,7 +5,7 @@ tab: welcome
 
 <script language="javascript" type="text/javascript">
 		function checkColour(){
-			if(document.getElementById('btn btn-info').checked) {
+			if(document.getElementById('Blue').checked) {
 				alert("1 is checked");
 			}
 			else { alert("Nada here");}
@@ -83,7 +83,7 @@ tab: welcome
                 <li>
 			 	<div class="btn-group-vertical" data-toggle="buttons-radio">
 
-			 		<button class="btn btn-primary" value="btn btn-primary" type="button" name="color">
+			 		<button class="btn btn-primary" value="btn btn-primary" type="button" name="color" id="Blue">
 			 			Blue
 			 			<input type="radio" checked>
 			 		</button>
