--- a/google/index.html
+++ b/google/index.html
@@ -128,6 +128,7 @@ tab: welcome
 		document.getElementById('Bright Blue').onclick = function()
 		{
 			document.getElementById('BrightBlue').focus();
+			document.getElementById('BrightBlue').checked();
 		}
 		
 		</script>
