--- a/google/index.html
+++ b/google/index.html
@@ -128,8 +128,9 @@ tab: welcome
 		document.getElementById('Bright Blue').onclick = function()
 		{
 			document.getElementById('BrightBlue').focus();
-			document.getElementById('BrightBlue').checked();
 		}
+		
+		input[type="radio"];
 		
 		</script>
 
