--- a/google/index.html
+++ b/google/index.html
@@ -6,7 +6,7 @@ tab: welcome
 <script language="javascript" type="text/javascript">
 		function checkColour(){
 
-			if(document.getElementById('Blue').checked) {
+			if(document.getElementById('Light Blue').checked) {
 				alert("1 is checked");
 			}
 			else { alert("Nada here");}
@@ -125,12 +125,10 @@ tab: welcome
 	
 	<script language="javascript" type="text/javascript">
  
-		document.getElementById('Bright Blue').onclick = function()
+		document.getElementById('Light Blue').onclick = function()
 		{
-			document.getElementById('BrightBlue').focus();
+			document.getElementById('Light Blue').focus();
 		}
-		
-		input[type="radio"];
 		
 		</script>
 
