--- a/google/index.html
+++ b/google/index.html
@@ -125,9 +125,9 @@ tab: welcome
 	
 	<script language="javascript" type="text/javascript">
  
-		document.getElementById('Light Blue').onclick = function()
+		document.getElementById('Red').onclick = function()
 		{
-			document.getElementById('Light Blue').focus();
+			document.getElementById('Red').focus();
 		}
 		
 		</script>
