--- a/google/index.html
+++ b/google/index.html
@@ -103,6 +103,13 @@ tab: welcome
 
 
 			 </ul>
+			 
+			 <ul class="button-group margin-top-none">
+			 	<li><a href="#" class="btn btn-primary">1</a></li>
+			 	<li><a href="#" class="btn btn-info">2</a></li>
+			 	<li><a href="#" class="btn btn-danger">3</a></li>
+			 </ul>
+			 
 		</div>
 
 	</div>
@@ -121,7 +128,6 @@ tab: welcome
 		}
 		
 		</script>
->>>>>>> fa057aa6622487a9463b5fd59de27d8602c51610
 
 
 
