--- a/google/index.html
+++ b/google/index.html
@@ -105,7 +105,9 @@ tab: welcome
 			 </ul>
 			 
 			 <ul class="button-group margin-top-none">
-			 	<li><a href="#" class="btn btn-primary">1</a></li>
+			 	<li><a href="#" class="btn btn-primary">1</a>
+			 		<a href="#" class="btn btn-danger">2</a>
+			 	</li>
 			 	<li><a href="#" class="btn btn-info">2</a></li>
 			 	<li><a href="#" class="btn btn-danger">3</a></li>
 			 </ul>
