--- a/google/index.html
+++ b/google/index.html
@@ -2,9 +2,7 @@
 layout: default
 tab: welcome
 ---
-<!--
-<head>
-    <!-- Bootstrap -->
+<!--<head>
     <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="../css/shenanigans.css" rel="stylesheet" media="screen">
     <link href="../css/slider.css" rel="stylesheet">
@@ -49,8 +47,7 @@ tab: welcome
     background: #BABABA;
   }
 	</style>
-  </head>-->
-
+</head>-->
 <body onload="SetEasel();">
 	
 	<script src="http://code.jquery.com/jquery.js"></script>
