--- a/google/index.html
+++ b/google/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 ---
 layout: default
 tab: welcome
@@ -182,13 +181,11 @@ tab: welcome
 				<span class="glyphicon glyphicon-pencil"></span>
 			</button>
 
-			<!--
 			<button type="button" class="btn btn-lg btn-success dropdown-toggle" data-toggle="dropdown">
-							<span class="caret"></span>
-						</button>
-			
-						<ul class="dropdown-menu pull-center" role="menu">-->
-			
+				<span class="caret"></span>
+			</button>
+
+			<ul class="dropdown-menu pull-center" role="menu">
 
 <!--
 				<li><a href="#">Colour:</a></li>
