--- a/google/index.html
+++ b/google/index.html
@@ -51,10 +51,8 @@ tab: welcome
 <body onload="SetEasel();">
 	
 	<script src="http://code.jquery.com/jquery.js"></script>
-    <!--
     <script src="../js/bootstrap.min.js"></script>
-        <script src="../js/bootstrap-slider.js"></script>-->
-    
+    <script src="../js/bootstrap-slider.js"></script>
     
     <!--
     <script>
