--- a/google/index.html
+++ b/google/index.html
@@ -53,6 +53,7 @@ tab: welcome
 	<script src="http://code.jquery.com/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/bootstrap-slider.js"></script>
+    <script src="../js/all.js"></script>
     
     <!--
     <script>
