Added ref to all.css

--- a/google/index.html
+++ b/google/index.html
@@ -54,6 +54,7 @@ tab: welcome
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/bootstrap-slider.js"></script>
     <script src="../js/all.js"></script>
+    <link href="../css/all.css" rel="stylesheet">
     
     <!--
     <script>
