--- a/google/index.html
+++ b/google/index.html
@@ -53,6 +53,9 @@ tab: welcome
 	<script src="http://code.jquery.com/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/bootstrap-slider.js"></script>
+    <link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="../css/shenanigans.css" rel="stylesheet" media="screen">
+    <link href="../css/slider.css" rel="stylesheet">
     
     <!--
     <script>
