--- a/google/Test.html
+++ b/google/Test.html
@@ -2,7 +2,7 @@
 layout: default
 tab: welcome
 ---
-
+<!DOCTYPE html>
 
 <body onload="SetEasel();">
 	<script src="http://code.jquery.com/jquery.js"></script>
