--- a/google/Test.html
+++ b/google/Test.html
@@ -61,9 +61,10 @@ tab: welcome
     <script src="../js/all.js"></script>
     <link href="../css/all.css" rel="stylesheet">
     
-    <button class="btn btn-lg btn-success" role="button" id="save-tool" type="button">
-		<span class="glyphicon glyphicon-save"></span>
-	</button> 
+    <p>
+<button class="btn btn-large btn-primary" type="button">Large button</button>
+<button class="btn btn-large" type="button">Large button</button>
+</p>
  
     <div id="container"></div>
 
