--- a/google/Test.html
+++ b/google/Test.html
@@ -59,10 +59,9 @@ tab: welcome
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/bootstrap-slider.js"></script>
     
-    <p>
-<button class="btn btn-large btn-primary" type="button">Large button</button>
-<button class="btn btn-large" type="button">Large button</button>
-</p>
+    <button class="btn btn-lg btn-success" role="button" id="save-tool" type="button">
+		<span class="glyphicon glyphicon-save"></span>
+	</button> 
  
     <div id="container"></div>
 
