--- a/google/Test.html
+++ b/google/Test.html
@@ -62,6 +62,10 @@ tab: welcome
     <button class="btn btn-lg btn-success" role="button" id="save-tool" type="button">
 		<span class="glyphicon glyphicon-save"></span>
 	</button> 
+	
+	<button class="btn btn-lg btn-success" role="button" id="delete-tool" type="button">
+		<span class="glyphicon glyphicon-remove"></span>
+	</button>
  
     <div id="container"></div>
 
