--- a/google/Test.html
+++ b/google/Test.html
@@ -65,6 +65,10 @@ tab: welcome
 			<span class="glyphicon glyphicon-move"></span>
 		</button>
 		
+		<button class="btn btn-lg btn-success" role="button" id="save-tool" type="button">
+			<span class="glyphicon glyphicon-save"></span>
+		</button>
+		
 	</div>
     
     <!--
