--- a/google/Test.html
+++ b/google/Test.html
@@ -115,6 +115,19 @@ tab: welcome
   </script>
     
     <div id="tools" class="btn-group">
+    	
+    	<div>
+            <p>
+            <b>R</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="RC" id="R" data-slider-tooltip="hide" data-slider-handle="round" >
+            </p>
+            <p>
+            <b>G</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="GC" id="G" data-slider-tooltip="hide" data-slider-handle="round" >
+            </p>
+            <p>
+            <b>B</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="BC" id="B" data-slider-tooltip="hide" data-slider-handle="round" >
+            </p>
+            <div id="RGB"></div>
+          </div>
 
 		<button class="btn btn-lg btn-success" role="button" id="cancel-tool" type="button">
 			<span class="glyphicon glyphicon-move"></span>
