--- a/google/Test.html
+++ b/google/Test.html
@@ -127,7 +127,7 @@ tab: welcome
             <div id="RGB"></div>
           </div>
 
-		<button class="btn btn-lg btn-success" role="button" id="cancel-tool" type="button">
+		<button class="btn btn-lg btn-success" role="button" id="hand-tool" type="button">
 			<span class="glyphicon glyphicon-move"></span>
 		</button>
 		
