--- a/google/Test.html
+++ b/google/Test.html
@@ -127,13 +127,73 @@ tab: welcome
             <div id="RGB"></div>
           </div>
 
-		<button class="btn btn-lg btn-success" role="button" id="hand-tool" type="button">
-			<span class="glyphicon glyphicon-move"></span>
-		</button>
-		
 		<button class="btn btn-lg btn-success" role="button" id="save-tool" type="button">
 			<span class="glyphicon glyphicon-save"></span>
 		</button>
+			
+		<button class="btn btn-lg btn-success" role="button" id="delete-tool" type="button">
+			<span class="glyphicon glyphicon-remove"></span>
+		</button>
+		
+		<button class="btn btn-lg btn-success" role="button" id="get-tool" type="button">
+			<span class="glyphicon glyphicon-folder-open"></span>
+		</button>
+		
+		<div id="tools" class="btn-group">
+
+		<button class="btn btn-lg btn-success" role="button" id="cancel-tool" type="button">
+			<span class="glyphicon glyphicon-move"></span>
+		</button> 
+
+
+		<div class="btn-group">
+
+			<button type="button" class="btn btn-lg btn-success" id="annotation-tool"> 
+				<span class="glyphicon glyphicon-screenshot"></span>
+			</button>
+
+			<button type="button" class="btn btn-lg btn-success dropdown-toggle" data-toggle="dropdown">
+				<span class="caret"></span>
+			</button>
+
+			<ul class="dropdown-menu pull-center">
+				<li><a href="#">Dropdown link</a></li>
+				<li><a href="#">Dropdown link</a></li>
+			</ul>
+		</div>
+
+
+		<div class="btn-group">
+
+			<button type="button"  class="btn btn-lg btn-success" id="line-tool"> 
+				<span class="glyphicon glyphicon-minus"></span>
+			</button>
+
+			<button type="button" class="btn btn-lg btn-success dropdown-toggle" data-toggle="dropdown">
+				<span class="caret"></span>
+			</button>
+
+			<ul class="dropdown-menu pull-center" role="menu">
+				<li><a href="#">Action</a></li>
+				<li><a href="#">Another action</a></li>
+				<li><a href="#">Something else here</a></li>
+				<li class="divider"></li>
+				<li><a href="#">Separated link</a></li>
+			</ul>
+		</div>
+
+		
+
+
+		<div class="btn-group">
+
+			<button type="button"  class="btn btn-lg btn-success" id="hand-tool"> 
+				<span class="glyphicon glyphicon-pencil"></span>
+			</button>
+
+			<button type="button" class="btn btn-lg btn-success dropdown-toggle" data-toggle="dropdown">
+				<span class="caret"></span>
+			</button>
 		
 	</div>
          
