--- a/google/Test.html
+++ b/google/Test.html
@@ -55,6 +55,7 @@ tab: welcome
 	
 	<script src="http://code.jquery.com/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.js"></script>
     <script src="../js/bootstrap-slider.js"></script>
     
     <script>
