--- a/google/Test.html
+++ b/google/Test.html
@@ -120,7 +120,7 @@ tab: welcome
 			</button>
 
 			<ul class="dropdown-menu pull-center" role="menu">
-				<li><a href="#">Action</a></li>
+				<li><input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="RC" id="R" data-slider-tooltip="hide" data-slider-handle="round" ></li>
 				<li><a href="#">Another action</a></li>
 				<li><a href="#">Something else here</a></li>
 				<li class="divider"></li>
