--- a/google/index.html
+++ b/google/index.html
@@ -52,9 +52,8 @@ tab: welcome
 	
 	<script src="http://code.jquery.com/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.js"></script>
     <script src="../js/bootstrap-slider.js"></script>
-    <script src="../js/all.js"></script>
-    <link href="../css/all.css" rel="stylesheet">
     
     <script>
               
