--- a/google/index.html
+++ b/google/index.html
@@ -20,7 +20,7 @@ tab: welcome
   #RGB {
     height: 20px;
     background: rgb(128, 128, 128);
-    width: 330px;
+    width: 100px;
   }
   #RC .slider-selection {
     background: #FF8282;
@@ -41,7 +41,7 @@ tab: welcome
     border-bottom-color: blue;
   }
   #R, #G, #B {
-    width: 300px;
+    width: 100px;
   }
   #eg .slider-selection {
     background: #BABABA;
@@ -190,31 +190,14 @@ tab: welcome
 			<ul class="dropdown-menu pull-center" role="menu">
 				
 				<div>
-					<b>R</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="RC" id="R" data-slider-tooltip="hide" data-slider-handle="round" >
-					<b>G</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="GC" id="G" data-slider-tooltip="hide" data-slider-handle="round" >
-					<b>B</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="BC" id="B" data-slider-tooltip="hide" data-slider-handle="round" >
+					<p><b>R</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="RC" id="R" data-slider-tooltip="hide" data-slider-handle="round" ></p>
+					<p><b>G</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="GC" id="G" data-slider-tooltip="hide" data-slider-handle="round" ></p>
+					<p><b>B</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="BC" id="B" data-slider-tooltip="hide" data-slider-handle="round" ></p>
 					<div id="RGB"></div>
 				  </div>
 
 <!--
-				<li><a href="#">Colour:</a></li>
-
-				<li>
-					<div>
-            <p>
-            <b>R</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="RC" id="R" data-slider-tooltip="hide" data-slider-handle="round" >
-            </p>
-            <p>
-            <b>G</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="GC" id="G" data-slider-tooltip="hide" data-slider-handle="round" >
-            </p>
-            <p>
-            <b>B</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="BC" id="B" data-slider-tooltip="hide" data-slider-handle="round" >
-            </p>
-            <div id="RGB"></div>
-          </div>
-				</li>
-
-				<li class="divider"></li>
+								<li class="divider"></li>
 
 				<li><a href="#">Line width:</a></li>
 				
