--- a/google/index.html
+++ b/google/index.html
@@ -166,11 +166,15 @@ tab: welcome
 			</button>
 
 			<ul class="dropdown-menu pull-center" role="menu">
-				<li><a href="#">Action</a></li>
-				<li><a href="#">Another action</a></li>
-				<li><a href="#">Something else here</a></li>
-				<li class="divider"></li>
-				<li><a href="#">Separated link</a></li>
+				<li><a href="#">Line width:</a></li>
+				
+				<li>
+					<div>
+            <input type="text" class="span2" value="5" id="sl1" >
+          </div>
+          
+          <input type="text" id="bar" value="5">
+				</li>
 			</ul>
 		</div>
 
