--- a/google/index.html
+++ b/google/index.html
@@ -15,7 +15,10 @@ tab: welcome
 		display: none;
 	}
   #sl1 {
-    width: 200px;
+    width: 100px;
+  }
+  #bar1 {
+  	width: 100px;
   }
   #RGB {
     height: 20px;
@@ -173,7 +176,7 @@ tab: welcome
             <input type="text" class="span2" value="5" id="sl1" >
           </div>
           
-          <input type="text" id="bar" value="5">
+          <input type="text" id="bar" value="5" id="bar1">
 				</li>
 			</ul>
 		</div>
