--- a/google/index.html
+++ b/google/index.html
@@ -176,7 +176,7 @@ tab: welcome
             <input type="text" class="span2" value="5" id="sl1" >
           </div>
           
-          <input type="text" id="bar" value="5" id="bar1">
+          <input type="text" id="bar1" value="5">
 				</li>
 			</ul>
 		</div>
