--- a/google/index.html
+++ b/google/index.html
@@ -191,7 +191,7 @@ tab: welcome
 				<li><a href="#">Line width:</a></li>
 				
 				<li>
-					<div>
+					<div class = "pull-left">
             <input type="text" class="span2" value="5" id="sl1" >
           </div>
 				</li>
