--- a/google/index.html
+++ b/google/index.html
@@ -190,8 +190,8 @@ tab: welcome
 			<ul class="dropdown-menu pull-center" role="menu">
 				<li><a href="#">Line width:</a></li>
 				
-				<li>
-					<div class = "pull-left">
+				<li class ="pull-left">
+					<div>
             <input type="text" class="span2" value="5" id="sl1" >
           </div>
 				</li>
