--- a/google/index.html
+++ b/google/index.html
@@ -187,13 +187,15 @@ tab: welcome
 				<span class="caret"></span>
 			</button>
 
-			<ul class="dropdown-menu pull-center" role="menu">
+			<ul class="dropdown-menu pull-left" role="menu">
 				<li><a href="#">Line width:</a></li>
 				
-				<li class ="pull-left">
+				<li>
 					<div>
             <input type="text" class="span2" value="5" id="sl1" >
           </div>
+          
+
 				</li>
 			</ul>
 		</div>
