--- a/google/index.html
+++ b/google/index.html
@@ -187,7 +187,7 @@ tab: welcome
 				<span class="caret"></span>
 			</button>
 
-			<ul class="dropdown-menu pull-left" role="menu">
+			<ul class="dropdown-menu pull-right" role="menu">
 				<li><a href="#">Line width:</a></li>
 				
 				<li>
