--- a/google/index.html
+++ b/google/index.html
@@ -213,7 +213,7 @@ tab: welcome
 				<span class="caret"></span>
 			</button>
 
-			<ul class="dropdown-menu pull-center" role="menu">
+			<ul class="dropdown-menu pull-right" role="menu">
 				
 				<div>
 					<p><b>R</b> <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="255" data-slider-step="1" data-slider-value="128" data-slider-id="RC" id="R" data-slider-tooltip="hide" data-slider-handle="round" ></p>
